# -*- coding: utf-8 -*-

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* setup.rb:  Moved guts to lib/rubygems/commands/setup_command.rb.
	* lib/rubygems/indexer.rb:  Added RSS feed generation on full index
	  update.

2008-03-04  Phil Hagelberg <technomancy@gmail.com>

	* lib/*: Prerelease gems go into their own index now and are excluded
	from other indices. InstallCommand only gets prereleases if explicitly
	requested. Thanks to Alex Vollmer.

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* lib/*: Add lots of pretty pretty_print stuff!

2008-02-25  Ryan Davis  <ryand@zenspider.com>

	* lib/rubygems/commands/check_command.rb:  Fix various usability
	  issues.

2009-02-10  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/specification: Refactored and fixed the installation_path
   method. It was overwrought and it now no longer uses File::SEPARATOR
   explicitly.
   [RubyForge: bug #23879]

2009-02-10  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/validator.rb: The Gem::Validator#verify_gem_file method
   now explicitly rescues Errno::EINVAL as well as Errno::ENOENT because
   MS Windows raises a different SystemCallError for empty paths.

2009-01-21  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/remote_fetcher.rb: Split out nil and file handling in
   the download method. Modified file URI handling to work properly.
   [RubyForge: bug #16495]

2009-01-19  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/remote_fetcher.rb: Added uri scheme validation back
   into the open_uri_or_path method, though it now accepts 'https' and
   'file' as well.
   * test/test_gem_remote_fetcher.rb: Updated the test_fetch_size_bad_uri
   to reflect the updated error message.

2009-01-15  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/remote_fetcher.rb: Removed the open_file_uri_path method
   since the URI#path method already does the same thing, and changed
   the file_uri? method so that it explicitly calls .to_s.